--- a/cleaned/41.html
+++ b/cleaned/41.html
@@ -181,11 +181,10 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p>
+        <h1>"KulturPinsel": Ausstellung in der Bücherhalle Harburg</h1>
             <img src="resources/_wsb_519x730_Plaka_rdz.jpg">
-          </p>
           <p>
-            Zu der Aquarellgruppe <b>"Kultur</b><b>Pinsel"</b> des Kulturhauses gehören z.Z. 14 begeisterte Malerinnen und Maler. Mit dem Gedanken "Diese Zeit gehört mir" trifft sich die Gruppe mittwochabends im Kulturhaus, um bei der freischaffenden Künstlerin Elke Nack-Karstens die Kunst des Aquarellierens zu erarbeiten.
+            Zu der Aquarellgruppe <b>"KulturPinsel"</b> des Kulturhauses gehören z.Z. 14 begeisterte Malerinnen und Maler. Mit dem Gedanken "Diese Zeit gehört mir" trifft sich die Gruppe mittwochabends im Kulturhaus, um bei der freischaffenden Künstlerin Elke Nack-Karstens die Kunst des Aquarellierens zu erarbeiten.
           </p>
           <p>
             "KulturPinsel" ist eine offene Gruppe, die sich in den vergangenen 15 Jahren durch Hinzufügen von Mischtechniken mit Kohle, Kreide und Collagen weiterentwickelt hat.
