--- a/cleaned/43.html
+++ b/cleaned/43.html
@@ -181,19 +181,23 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          HISTORISCHE RUNDGÄNGE IN NEUGRABEN
+          <h1>Historische Rundgänge</h1>
           <p>
             Auch 2017 bieten wir wieder historische Rundgänge in Neugraben und Süderelbe an.
-          </p>
-          <p>
             Bitte sehen Sie auf unserer Internet-Präsenz <a href="http://www.suederelbe-archiv.de" title="Süderelbe-Archiv / Geschichtswerkstatt" target="_blank">www.suederelbe-archiv.de</a> nach!
           </p>
-          <p>
-            <b><i>Rückblick 2016:</i> </b>
-          </p>
-          <p>
-            <b><u>Samstag, 28. Mai</u> <u>16 um 14.30 Uhr:</u></b>
-          </p><img src="resources/_wsb_430x856_16-04-25+Rundgang+Dorfkern+28.5.2016.jpg"> <b><u>Samstag, 11. Juni 16 um 15.00 Uhr:</u></b> <img src="resources/_wsb_426x844_16-05-04+Rundgang+Stolpersteine+11_rdz.jpg"> Sonntag, 17. Juli 16 um 11.00 Uhr: <img src="resources/_wsb_425x843_16-05-02+Rundgang+Arch$C3$A4ologischer+Wanderpfad.jpg"> <b>Anmeldung ab 1. Juli 2016 bitte unter info@suederelbe-archiv.de</b>! Vielen Dank. Bitte beachten Sie: <b>Es stehen aktuell keine Plätze mehr zur Verfügung (So, 10.07.2016)</b> - der Rundgang ist ausgebucht.
+          <h2>Rückblick 2016:</h2>
+          <h3>Samstag, 28. Mai 16 um 14.30 Uhr:</h3>
+          </p><img src="resources/_wsb_430x856_16-04-25+Rundgang+Dorfkern+28.5.2016.jpg"></p>
+
+          <h3>Samstag, 11. Juni 16 um 15.00 Uhr:</h3>
+          <p><img src="resources/_wsb_426x844_16-05-04+Rundgang+Stolpersteine+11_rdz.jpg"></p>
+
+          <h3>Sonntag, 17. Juli 16 um 11.00 Uhr</h3>
+          <p><img src="resources/_wsb_425x843_16-05-02+Rundgang+Arch$C3$A4ologischer+Wanderpfad.jpg"></p>
+
+          <p>Anmeldung ab 1. Juli 2016 bitte unter <a href="mailto:info@suederelbe-archiv.de">info@suederelbe-archiv.de</a>! Vielen Dank.</p>
+          <p>Bitte beachten Sie: <b>Es stehen aktuell keine Plätze mehr zur Verfügung (So, 10.07.2016)</b> - der Rundgang ist ausgebucht.</p>
         </td>
       </tr>
     </table>
