--- a/cleaned/44.html
+++ b/cleaned/44.html
@@ -80,31 +80,25 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
+          <h1>Angebote für Geflüchtete</h1>
           <img src="resources/Refuuges_welcome.jpg">
           <p>
-            <b>In Kooperation mit der Initiative "Willkommen in Süderelbe" findet jeden Montag das "Café Welcome" statt. In der Zeit von 15-18 Uhr öffnet dazu das Offene Atelier mit der Kulturhaus-Künstlerin Gabriele Wendland und die Tanzwerkstatt mit Tanzpädagogin Wiebke Heinrich.</b>
+            In Kooperation mit der Initiative "Willkommen in Süderelbe" findet jeden Montag das "Café Welcome" statt. In der Zeit von 15-18 Uhr öffnet dazu das Offene Atelier mit der Kulturhaus-Künstlerin Gabriele Wendland und die Tanzwerkstatt mit Tanzpädagogin Wiebke Heinrich.
           </p>
           <p>
-            <b>Täglich finden Deutsch-Sprachkurse in den Räumen des Kulturhauses bzw. des BGZ statt.</b>
+            Täglich finden Deutsch-Sprachkurse in den Räumen des Kulturhauses bzw. des BGZ statt.
           </p>
           <p>
-            <b>Einzelne Geflüchtete mit Interesse an bildender Kunst oder afrikanischem Trommeln sind auch in den Kursangeboten des Kulturhauses willkommen!</b>
+            Einzelne Geflüchtete mit Interesse an bildender Kunst oder afrikanischem Trommeln sind auch in den Kursangeboten des Kulturhauses willkommen!
           </p>
           <p>
-            <b>Zur Zeit warten 3 Konzertgitarren, arabische Saiteninstrumente und diverse Trommeln auf Musiker aus den entsprechenden Ländern, um eine Musikgruppe mit Geflüchteten und Deutschen starten zu lassen.</b>
+            Zur Zeit warten 3 Konzertgitarren, arabische Saiteninstrumente und diverse Trommeln auf Musiker aus den entsprechenden Ländern, um eine Musikgruppe mit Geflüchteten und Deutschen starten zu lassen.
           </p>
-          <p>
-            <b>"Jobs für Flüchtlinge" - Initiative:</b>
-          </p>
-          <p>
-            <b>http://www.jobs-fuer-fluechtlinge.de (auf Deutsch)</b>
-          </p>
-          <p>
-            <b>http://www.freelancer.international/refugee (für englischsprachige Flüchtlinge)</b>
-          </p>
-          <p>
-            <b>http://www.freelance-market/worksample/12864.pdf (Zweisprachiges Plakat mit Eintragsbedingungen für Flüchtlinge)</b>
-          </p>
+          <h2>"Jobs für Flüchtlinge" - Initiative</h2>
+          <ul>
+          <li><a href="http://www.jobs-fuer-fluechtlinge.de">www.jobs-fuer-fluechtlinge.de</a> (auf Deutsch)</li>
+          <li><a href="http://www.freelancer.international/refugee">www.freelancer.international/refugee</a> (für englischsprachige Flüchtlinge)</li>
+          <li><a href="http://www.freelance-market/worksample/12864.pdf">www.freelance-market/worksample/12864.pdf</a> (Zweisprachiges Plakat mit Eintragsbedingungen für Flüchtlinge)</li></ul>
         </td>
       </tr>
     </table>
