--- a/cleaned/45.html
+++ b/cleaned/45.html
@@ -181,29 +181,18 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p align="center">
-            <img src="resources/Dirk+Janssen_Vortrag_rdz.jpg">
-          </p>
-          <h3 align="center">
-            Reisevortrag mit Fotoshow
-          </h3>
-          <p>
-            <b>Eintritt: Frei</b>
-          </p>
+        <h1>Dirk Janssen: Expedition zu den Devils Holes in Venezuela</h1>
+        <h2>Reisevoortrag mit Fotoshow am 10. Nov.</h2>
+        <img src="resources/Dirk+Janssen_Vortrag_rdz.jpg">
+        <p><b>Eintritt: Frei</b></p>
           <p>
             Gerne eine Spende zugunsten „neugraben fairändern“.
           </p>
-          <table>
-            <tbody>
-              <tr>
-                <td>
-                  <p>
+          <p>
                     Im Februar 2014 reiste Dirk Janssen in die faszinierende Umgebung der Tafelberge im Südwesten Venezuelas. Ziel der Expedition war der erst in den 1960er Jahren vom Flugzeug aus entdeckte Sarisarinama-Tepui, der 1.300 Meter aus dem umliegenden Regenwald aufragt. Oben auf dem Plateau befinden sich zwei riesige Einsturzkavernen, Simas genannt, von denen seine Expedition die kleinere von ihnen, das Sima Menor, im Rahmen einer Erstbegehung erkundete.
                   </p>
                   <p>
                     Der aus Neugraben stammende Hobby-Reisende berichtet mit eindrucksvollen Fotos und Videosequenzen von seinem Abenteuer, das ihm unvergesslich
-                  </p>
-                  <p>
                     schöne Momente bescherte, ihn aber auch fast an seine Grenzen brachte.
                   </p>
                 </td>
