--- a/cleaned/46.html
+++ b/cleaned/46.html
@@ -181,24 +181,20 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p>
-            <b>Eine Ehe in Briefen</b>
-          </p>
-          <p>
-            <b>Sofia und Leonid Tolstoi</b>
-          </p>
-          <p>
-            <b>Was im April im Literaturcafé so großen Erfolg hatte, soll auf Wunsch der Zuhörer am</b>
-          </p>
-          <p>
-            <b>Mittwoch, den 2. November um 19 Uhr,</b>
-          </p>
-          <p>
-            <b>fortgesetzt werden.</b>
-          </p>
-          <p>
-            <b>Dörte Ellerbrock und Dieter Wehrbrink lesen mit verteilten Rollen die zweite Hälfte des Briefwechsels von Sofia und Leonid Tolstoi.</b>
-          </p><img src="resources/tolstoi+und+frau.jpg"> <b>Im Foyer des Kulturhauses Süderelbe, Am Johannisland 2, 21147 Hamburg Barrierefrei mit dem Fahrstuhl zu erreichen. Der Eintritt ist frei!</b>
+        <h1>Lesung und Tolstoi</h1>
+        <h2>Eine Ehe in Briefen</h2>
+        <p>Was im April im Literaturcafé so großen Erfolg hatte, soll auf Wunsch der Zuhörer am</p>
+        <h2>Mittwoch, den 2. November um 19 Uhr</h2>
+        <p>fortgesetzt werden.</p>
+        <p>Dörte Ellerbrock und Dieter Wehrbrink lesen mit verteilten Rollen die zweite Hälfte des Briefwechsels von Sofia und Leonid Tolstoi.</p>
+
+        <img src="resources/tolstoi+und+frau.jpg">
+
+        <p>Im Foyer des Kulturhauses Süderelbe<br>
+          Am Johannisland 2<br>
+          21147 Hamburg</p>
+
+        <p>Barrierefrei mit dem Fahrstuhl zu erreichen. Der Eintritt ist frei!</p>
         </td>
       </tr>
     </table>
