--- a/cleaned/47.html
+++ b/cleaned/47.html
@@ -181,19 +181,21 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <img src="resources/_wsb_466x202_presse+bild.jpg">
-          <p>
-            <b>Während der "Chinatime", mit der die Hansestadt Hamburg ihre langjährige Partnerschaft mit China feiert, finden drei Ausstellungen einer Künstlergruppe der Gesellschaft für Deutsch-Chinesischen-Kulturaustausch statt - eine davon im Kulturhaus Süderelbe.</b>
+        <h1>Einmal China und zurück - Ausstellung</h1>
+        <h2>Vernissage am Montag, den 7.11.16 um 19.30 Uhr</h2>
+        <h2>Ausstellung vom 8.11. bis 25.11.16 werktags von 10-20 Uhr</h2>
+        <img src="resources/_wsb_466x202_presse+bild.jpg">
+          <p>Während der "Chinatime", mit der die Hansestadt Hamburg ihre langjährige Partnerschaft mit China feiert, finden drei Ausstellungen einer Künstlergruppe der Gesellschaft für Deutsch-Chinesischen-Kulturaustausch statt - eine davon im Kulturhaus Süderelbe. Die Gruppe zeigt nach gemeinsamen Ausstellungen in Nanjing und Wuhu ihre Reiseeindrücke aus China.</p>
+          <p>Erfahrungen und Einflüsse werden dabei auf unterschiedliche Art und Weise reflektiert.
           </p>
-          <p>
-            <b>Die Gruppe zeigt nach gemeinsamen Ausstellungen in Nanjing und Wuhu ihre Reiseeindrücke aus China.</b>
-          </p>
-          <p>
-            <b>Erfahrungen und Einflüsse werden dabei auf unterschiedliche Art und Weise reflektiert.</b>
-          </p>
-          <p>
-            <b>Ausgestellt werden Zeichnungen, Grafiken, Fotografien Aquarelle sowie Mischtechniken im westlichen wie im traditionellen chinesischen Stil.</b>
-          </p><img src="resources/_wsb_364x381_rindfleisch_im_wok+wendland+watercolor+40+x+40+cm+$282$29.jpg"> <b>Vernissage am Montag, den 7.11.16 um 19.30 Uhr Ausstellung vom 8.11. bis 25.11.16 werktags von 10-20 Uhr</b> Werke der Künstlergruppe sind ebenfalls zu sehen im Kunsthaus an der Alster (Alsterchaussee 3, 20149 HH) in der Seemannsmission (Große Elbstraße 132, 22367 HH) 
+          <p>Ausgestellt werden Zeichnungen, Grafiken, Fotografien Aquarelle sowie Mischtechniken im westlichen wie im traditionellen chinesischen Stil.</p>
+          <img src="resources/_wsb_364x381_rindfleisch_im_wok+wendland+watercolor+40+x+40+cm+$282$29.jpg">
+
+          <p>Werke der Künstlergruppe sind ebenfalls zu sehen</p>
+          <ul>
+          <li>im Kunsthaus an der Alster (Alsterchaussee 3, 20149 HH)</li>
+          <li>in der Seemannsmission (Große Elbstraße 132, 22367 HH)</li>
+          </ul>
         </td>
       </tr>
     </table>
