--- a/cleaned/48.html
+++ b/cleaned/48.html
@@ -181,15 +181,13 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p>
-            <b>Der kulturelle Rucksack - Alltag und Identität in der arabischen Welt und was davon mitgenommen wird</b>
-          </p>
+        <h1>Der kulturelle Rucksack</h1>
+        <h3>Alltag und Identität in der arabischen Welt und was davon mitgenommen wird</h3>
+        <h2>Montag, den 31.10.16, um 19 Uhr, im Kulturhaus Süderelbe.</h2>
           <p>
             Nach seiner erfolgreichen Ausstellung "Leben auf der Flucht", die auf ihrer Tour durch ganz Deutschland auch im Kulturhaus Süderelbe zu sehen war, ist Mirco Keilberth wieder in Neugraben. Der Nordafrika-Korrespondent berichtet seit 2006 u.a. dem Magazin Der Spiegel, taz, N-TV und deutsche Welle. Zusammen mit dem Imam Abu Ahmad Jacobi, der in Hamburg deutschsprachige Koranklassen unterrichtet und es als seine höchste Aufgabe betracht6et, Teenager von Radikalen fernzuhalten, wird er an diesem Abend das Thema der im Alltag geprägten Identität in der arabischen Welt vorstellen und diskutieren.
           </p>
-          <p>
-            <b>Montag, den 31.10.16, um 19 Uhr, im Kulturhaus Süderelbe.</b>
-          </p>
+
           <p>
             <b>Der Eintritt ist frei.</b>
           </p>
