--- a/cleaned/50.html
+++ b/cleaned/50.html
@@ -80,9 +80,7 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
-            Multikulturelles Tanztheater für Kids
-          </h3>
+        <h1>Multikulturelles Tanztheater "Weltenspringer" für Kids</h1>
           <p>
             In Zusammenarbeit mit Schulen und Kinder- und Jugendhilfeeinrichtungen begann eine Tanzcompagnie unter der Leitung von Wiebke Heinrich 2013, Kinder aus dem Raum Süderelbe in Kursen zu trainieren.
           </p>
@@ -96,35 +94,23 @@
             Die Kinder kommen teilweise aus der Erstaufnahme und den Folgeunterkünften für Geflüchtete, die zusammen mit Ortsansässigen das Stück erarbeiten. Damit schlägt das Projekt Brücken zwischen den Kindergruppen und versucht Vorurteile abzubauen, mit denen sie aufwachsen.
           </p>
           <p>
-            Kontakt: Wiebke Heinrich, juneejah@gmail.com
+            Kontakt: Wiebke Heinrich, <a href="mailto:juneejah@gmail.com">juneejah@gmail.com</a>
           </p>
+          <h3>Aufführung der Weltenspringer</h3>
+          <p>am 25. Juni 2017 um 16 Uhr<br>
+            im Rieckhof<br>
+            Rieckhofstr. 12<br>
+            21073 Hamburg</p>
           <p>
-            <b>Aufführung der Weltenspringer</b>
+            <b>Eintritt frei!</b>
           </p>
-          <p>
-            <b>am</b> <b>25. Juni 17 um 16 Uhr</b>
-          </p>
-          <p>
-            im Rieckhof
-          </p>
-          <p>
-            Rieckhofstr. 12, 21073 Hamburg
-          </p>
-          <p>
-            Eintritt frei <b>!</b>
-          </p><img src="resources/_wsb_487x345_Flyer_250617.jpg">
-          <p>
-            ________________________________________________________________________________
-          </p>
-          <p>
-            Vergangene Aufführungen:
-          </p>
-          <p>
-            Im Theater Zeppelin am 21. Mai 2017
-          </p>
-          <p>
-            <img src="resources/_wsb_526x369_TheaterZeppelin_web.jpg">
-          </p><img src="resources/_wsb_458x328_Fleyr_web.jpg">
+
+          <img src="resources/_wsb_487x345_Flyer_250617.jpg">
+
+          <h2>Vergangene Aufführungen</h2>
+          <h3>Im Theater Zeppelin am 21. Mai 2017</h3>
+          <img src="resources/_wsb_526x369_TheaterZeppelin_web.jpg">
+          <img src="resources/_wsb_458x328_Fleyr_web.jpg">
         </td>
       </tr>
     </table>
