--- a/cleaned/40.html
+++ b/cleaned/40.html
@@ -80,24 +80,41 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <h3>
-            Fortbildung zur zertifizierten
-          </h3>
-          <h3>
-            Sprachföderkraft mit künstlerischen Mitteln
-          </h3>
+          <h1>
+            Fortbildung zur Sprachförderkraft mit künstlerischen Mitteln
+          </h1>
           <p>
-            Sprache ist ein wesentlicher Bestandteil für einen erfolgreichen Lebens- und Bildungsweg. Mit der gemeinsamen Initiative von KIKU und Buntsprecht wollen wir Kindern, die Deutsch als Zweitsprache lernen, Sprachkompetenz mit Spiel und Spaß vermitteln. Die Verbindung von Kunst und Sprache, von Kreativität und Kommunikation ist unser Ziel. Und das so früh wie möglich! Wir suchen KünstlerInnen, Kultur- und TheaterpädagogInnen, ErzieherInnen und LehrerInnen, die ihr Repertoire erweitern wollen. In der Fortbildung zur zertifizierten Sprachförderkraft lernen Sie, wie künstlerische Praxis sprachförderlich eingesetzt werden kann. Dazu bieten wir eine Fortbildungsreihe zu folgenden Terminen im Kinderkulturhaus KIKU in Hamburg-Bergedorf und dem Kulturhaus Süderelbe innerhalb des Bildungs- und Gemeinschaftszentrum BGZ Süderelbe in Hamburg-Neugraben an:
+            Sprache ist ein wesentlicher Bestandteil für einen erfolgreichen Lebens- und Bildungsweg. Mit der gemeinsamen Initiative von KIKU und Buntsprecht wollen wir Kindern, die Deutsch als Zweitsprache lernen, Sprachkompetenz mit Spiel und Spaß vermitteln. Die Verbindung von Kunst und Sprache, von Kreativität und Kommunikation ist unser Ziel. Und das so früh wie möglich! Wir suchen KünstlerInnen, Kultur- und TheaterpädagogInnen, ErzieherInnen und LehrerInnen, die ihr Repertoire erweitern wollen. In der Fortbildung zur zertifizierten Sprachförderkraft lernen Sie, wie künstlerische Praxis sprachförderlich eingesetzt werden kann.</p>
+          <p>
+            Dazu bieten wir eine Fortbildungsreihe zu folgenden Terminen im Kinderkulturhaus KIKU in Hamburg-Bergedorf und dem Kulturhaus Süderelbe innerhalb des Bildungs- und Gemeinschaftszentrum BGZ Süderelbe in Hamburg-Neugraben an:
+          </p>
+          <ul>
+          <li>Sa, den 04.02.2017 im KIKU, Kinderkulturhaus</li>
+          <li>Sa, den 01.04.2017 im BGZ, Kulturhaus Süderelbe</li>
+          <li>Sa, den 03.06.2017 im KIKU, Kinderkulturhaus</li>
+          <li>Sa, den 02.09.2017 im BGZ, Kulturhaus Süderelbe</li>
+          <li>Sa, den 04.11.2017 im KIKU, Kinderkulturhaus</li>
+          <li>Sa, den 09.12.2017 im BGZ, Kulturhaus Süderelbe</li>
+          </ul>
+          <p>
+            Jeweils von 10 bis 17 Uhr</p>
+
+            <p>Die Teilnahmegebühr für alle sechs Termine beträgt 250,- Euro.</p>
+
+            <p>Die Fortbildung zur zertifizierten Sprachförderkraft findet in Kooperation mit dem LI Hamburg (Landesinstitut für Lehrerbildung und Schulentwicklung) statt. Bei erfolgreichem Abschluss erhalten Sie ein Zertifikat, das von allen Hamburger Schulen anerkannt wird.
           </p>
           <p>
-            Sa, den 04.02.2017 im KIKU, Kinderkulturhaus Sa, den 01.04.2017 im BGZ, Kulturhaus Süderelbe Sa, den 03.06.2017 im KIKU, Kinderkulturhaus Sa, den 02.09.2017 im BGZ, Kulturhaus Süderelbe Sa, den 04.11.2017 im KIKU, Kinderkulturhaus Sa, den 09.12.2017 im BGZ, Kulturhaus Süderelbe
-          </p>
-          <p>
-            Jeweils von 10 bis 17 Uhr Die Teilnahmegebühr für alle sechs Termine beträgt 250,- Euro. Die Fortbildung zur zertifizierten Sprachförderkraft findet in Kooperation mit dem LI Hamburg (Landesinstitut für Lehrerbildung und Schulentwicklung) statt. Bei erfolgreichem Abschluss erhalten Sie ein Zertifikat, das von allen Hamburger Schulen anerkannt wird.
-          </p>
-          <p>
-            Weitere Informationen entnehmen sie bitte dem Flyer, <a href="resources/2016-11+Sprachf$C3$B6rder-Flyerv7b_rdz.pdf" target="_blank">hier per Klick</a> Anmeldungen bitte möglichst per Email an: Tanja Hausmann KIKU Lohbrügger Markt 5 21031 Hamburg 040 - 739 280 95 hausmann@kiku-hh.de Wir freuen uns auf ihre Teilnahme!
-          </p>
+            Weitere Informationen entnehmen sie bitte dem Flyer, <a href="resources/2016-11+Sprachf$C3$B6rder-Flyerv7b_rdz.pdf" target="_blank">hier per Klick</a></p>
+
+            <p>Anmeldungen bitte möglichst per Email an</p>
+            <p>Tanja Hausmann<br>
+            KIKU<br>
+            Lohbrügger Markt 5<br>
+            21031 Hamburg<br>
+            Tel.: 040 - 739 280 95<br>
+            E-Mail: <a href="mailto:hausmann@kiku-hh.de">hausmann@kiku-hh.de</a>
+            </p>
+            <p>Wir freuen uns auf ihre Teilnahme!</p>
         </td>
       </tr>
     </table>
