--- a/cleaned/42.html
+++ b/cleaned/42.html
@@ -181,9 +181,10 @@
           </ul>
         </td>
         <td colspan="1" rowspan="1">
-          <p>
-            <b>Jubiläumsjahr 2016</b>
-          </p><img src="resources/_wsb_432x230_500J_Fo$CC$88rdervereinNeugr_Endfassung_web.jpg"> Informationen über die Jubiläumsjahr-Veranstaltungen finden Sie unter <b><a href="43.html"><b>"Historische Rundgänge"</b></a></b>und <a href="29.html"><b>"Historisches Sommerfest am 25. Juni"</b></a>
+          <h1>500 Jahre Neugraben</h1>
+          <h2>Jubiläumsjahr 2016</h2>
+          </p><img src="resources/_wsb_432x230_500J_Fo$CC$88rdervereinNeugr_Endfassung_web.jpg"></p>
+          <p>Informationen über die Jubiläumsjahr-Veranstaltungen finden Sie unter <a href="43.html">"Historische Rundgänge"</a> und <a href="29.html">"Historisches Sommerfest am 25. Juni"</a>.</p>
         </td>
       </tr>
     </table>
